# influxdb-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/influxdb_mcp/: config.py  influxdb_client.py  server.py
